canadensis_dsdl_compiler/tests/compile_fail/long_name/canadensis/long_long/TwoHundredAndFiftySixCharactersLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLongLong.1.0.uavcan
# The path and name of this type are 256 characters long, which is too long.
@sealed
